k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genericmed-production
  labels:
    app.kubernetes.io/name: genericmed
    app.kubernetes.io/part-of: healthcare-os
    environment: production
