k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genericmed-api
  namespace: genericmed-production
  labels:
    app.kubernetes.io/name: genericmed-api
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
    - name: http
      port: 5000
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: genericmed-api
